--- a/css/board.css
+++ b/css/board.css
@@ -92,6 +92,27 @@
   font-weight: bold;
 }
 
+.board-cell.flow-diag-left-both::after {
+  content: "↖";
+  inset: -5% 0 50% 0;
+  font-size: 20px;
+}
+.board-cell.flow-diag-left-both::before {
+  content: "↙";
+  position: absolute;
+  inset: 50% 0 -5% 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  color: #f3e5c8;
+  opacity: 0.4;
+  pointer-events: none;
+  z-index: 0;
+  font-weight: bold;
+}
+
+
 .row-sep { height: 2px; background: #fff4f4; margin: 4px 0; width: 100%; }
 
 /* Highlighted destination */
